--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gh-pages": "^6.1.1",
     "hito1pizzeria": "file:",
     "hito3": "file:",
+    "mdb-react-ui-kit": "^9.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
